--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -17,10 +17,10 @@
     &__right{
       width: 40%;
       height: 100%;
-      &--name,&--link,&--git{
+      &--name,&--link,&--git,&--catchcopy{
         input{
           width: 100%;
-          height: 4vh;
+          height: 3vh;
           margin: 1vh 0;
         }
         textarea{
