--- a/app/views/contents/_form.html.haml
+++ b/app/views/contents/_form.html.haml
@@ -9,9 +9,6 @@
         .top__right--catchcopy
           %p キャッチコピー
           = f.text_field :catchcopy ,placeholder:"キャッチコピー"
-        .top__right--overview
-          %p キャッチコピー
-          = f.file_field :overview ,placeholder:"トップ画像"
         .top__right--link
           %p web-link
           = f.url_field :link,placeholder:"http:..."
@@ -21,6 +18,9 @@
         .top__right--category
           %p カテゴリー選択
           = f.collection_check_boxes :category_ids, Category.all, :id, :name
+        .top__right--overview
+          %p トップ画像
+          = f.file_field :overview 
     -# ================================================================================================
     -if @content.persisted?
       .infomation
