--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -1,12 +1,12 @@
 .works__contentsBox
   .works__contentsBox__photoBlock
-    =image_tag(content.infomations.first.image.to_s)
+    =image_tag(content.overview.to_s)
     .works__contentsBox__photoBlock--filter.filter
       =content.name
   .works__contentsBox__textBlock
     .works__contentsBox__textBlock__left
       .works__contentsBox__textBlock__left--name
-        =content.name
+        =content.catchcopy
       %table.works__contentsBox__textBlock__left__info
         %tr
           %th DATE
