--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -19,7 +19,7 @@
     .works__contentsBox__textBlock__right
       =link_to(content_path(content.id)) do
         .works__contentsBox__textBlock__right__moreBtn.linkBtn
-          %p SHOW MORE
+          %p DITAIL
           .works__contentsBox__textBlock__right__moreBtn--icon.arrow
             =fa_icon "long-arrow-right"
 .separateLine
