--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -1,55 +1,105 @@
 #show{
+  // upper================================================================================================
+.upperBlock{
   height: 100vh;
   width: 100vw;
   position: relative;
-// ================================================================================================
-.header{
-  width:90%;
-  height:10vh;
-  margin: 0 auto;
-  font-size: 3vh;
-  line-height: 10vh;
-  display: flex;
-  justify-content: flex-end;
-  &--name{
-    margin-right: auto;
+  &__name{
+    @include position_center;
   }
-  &--link,&--git{
-    font-size: 2.5vh;
-    margin-left: 2vw;
-    height: 7vh;
-    &:hover{
-      border-bottom: solid 1px $black;
+  &__overview{
+    @include position_center;
+    width: 100vw;
+    height: 65vh;
+    img{
+      width: 100%;
+      height: 100%;
     }
   }
 }
+.middleBlock{
+  height: 20vh;
+  width:100vw;
+  // background-color: red;
+  &--contentBox{
+    width: 60vw;
+    height: 20vh;
+    margin: 0 auto;
+    background-color: yellow;
+  }
+}
+// lower================================================
+.lowerBlock{
+  width: 100vw;
+  height: 80vh;
+  background-color: blue;
+  &__imagesBlock{
+    background-color:gray;
+    width: 80vw;
+    height: 50vh;
+    margin: 0 auto;
+    display: flex;
+      justify-content: space-between;
+    &--bigDisplay{
+      background-color: red;
+      width: 45vw;
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+      &--wrapper{
+        position: absolute;
+          top: 0;
+          left: -46vw;
+        width: 230vw;
+        height:100%;
+        img{
+          margin: 0;
+          width: 45vw;
+          height: 100%;
+        }
+      }
+    }
+    &--smallDisplay{
+      background-color: red;
+      width: 30vw;
+      height: 100%;
+      display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+      &--wrapper{
+        background-color: white;
+        width: 13vw;
+        height: 13vw;
+      }
+    }
+  }
 // ------------------------------------------------
-.slide{
-  width: 85vw;
-  margin:0 auto;
-  display: flex;
-  @include position_center;
-  .back{
-    margin :0 auto 0 0;
-    display: none;
-  }
-  .next{
-    margin: 0 0 0 auto;
-  }
-  i{
-    font-size: 4em;
-    color:$gray;
-    -webkit-text-stroke: 0.15em white;
-    &:hover{
-      color:$black;
-      -webkit-text-stroke: 0.1em white;
-    }
-  }
-}
+// .slide{
+//   width: 85vw;
+//   margin:0 auto;
+//   display: flex;
+//   @include position_center;
+//   .back{
+//     margin :0 auto 0 0;
+//     display: none;
+//   }
+//   .next{
+//     margin: 0 0 0 auto;
+//   }
+//   i{
+//     font-size: 4em;
+//     color:$gray;
+//     -webkit-text-stroke: 0.15em white;
+//     &:hover{
+//       color:$black;
+//       -webkit-text-stroke: 0.1em white;
+//     }
+//   }
+// }
 // ------------------------------------------------
 .contentBox{
-  height: 70vh;
-  width: 90vw;
+  height: 50vh;
+  width: 60vw;
   margin: 2vh auto;
   &__info{
     display: none;
@@ -96,6 +146,7 @@
     width: 3.5vh;
     height: 3.5vh;
   }
+}
 }
 // ================================================
 }
