--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -1,6 +1,6 @@
 .works__contentsBox
   .works__contentsBox__photoBlock
-    =image_tag(content.overview.to_s)
+    =image_tag(content.topImage.to_s)
     .works__contentsBox__photoBlock--filter.filter
       =content.name
   .works__contentsBox__textBlock
