--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -13,6 +13,18 @@
       width: 40%;
       height: 100%;
       background-color: $gray;
+      &--topText,&--topImage{
+        input{
+          width: 100%;
+          height: 3vh;
+          margin: 1vh 0;
+        }
+        textarea{
+          margin-top: 0.5vh;
+          width: 100%;
+          height: 20vh;
+        }
+      }
     }
     &__right{
       width: 40%;
