--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -18,135 +18,69 @@
   }
 }
 .middleBlock{
-  height: 20vh;
+  height: 15vh;
   width:100vw;
   // background-color: red;
   &--contentBox{
     width: 60vw;
-    height: 20vh;
+    height: 15vh;
     margin: 0 auto;
-    background-color: yellow;
   }
 }
 // lower================================================
 .lowerBlock{
   width: 100vw;
-  height: 80vh;
-  background-color: blue;
+  height: 85vh;
+  // background-color: blue;
   &__imagesBlock{
-    background-color:gray;
-    width: 80vw;
-    height: 50vh;
+    padding: 5vh 15vh;
+    background-color:rgba(241, 241, 241,0.5);
+    width: 100vw;
+    height: 60vh;
     margin: 0 auto;
     display: flex;
       justify-content: space-between;
     &--bigDisplay{
-      background-color: red;
-      width: 45vw;
-      height: 100%;
+      // background-color: red;
+      width: 48vw;
+      height: 50vh;
       overflow: hidden;
       position: relative;
       &--wrapper{
         position: absolute;
           top: 0;
-          left: -46vw;
+          // left: -46vw;
         width: 230vw;
         height:100%;
         img{
           margin: 0;
-          width: 45vw;
+          width: 48vw;
           height: 100%;
         }
       }
     }
     &--smallDisplay{
-      background-color: red;
-      width: 30vw;
-      height: 100%;
+      // background-color: red;
+      width: 28vw;
+      height: 50vh;
       display: flex;
         justify-content: space-between;
+        align-content: space-between;
         flex-wrap: wrap;
       &--wrapper{
         background-color: white;
         width: 13vw;
         height: 13vw;
+        position: relative;
+        overflow: hidden;
+        img{
+          @include position_center;
+          width:auto;
+          height: 13vw;
+        }
       }
     }
   }
-// ------------------------------------------------
-// .slide{
-//   width: 85vw;
-//   margin:0 auto;
-//   display: flex;
-//   @include position_center;
-//   .back{
-//     margin :0 auto 0 0;
-//     display: none;
-//   }
-//   .next{
-//     margin: 0 0 0 auto;
-//   }
-//   i{
-//     font-size: 4em;
-//     color:$gray;
-//     -webkit-text-stroke: 0.15em white;
-//     &:hover{
-//       color:$black;
-//       -webkit-text-stroke: 0.1em white;
-//     }
-//   }
-// }
-// ------------------------------------------------
-.contentBox{
-  height: 50vh;
-  width: 60vw;
-  margin: 2vh auto;
-  &__info{
-    display: none;
-    width: 80%;
-    height: 100%;
-    margin: 0 auto;
-    position: relative;
-    &:hover{
-      filter: grayscale(90%);
-    }
-    img{
-      height: 100%;
-      width: 100%;
-      box-shadow: 0 0 10px $gray;
-      filter: grayscale(30%);
-    }
-  }
-  .active{
-    display: block;
-  }
-}
-// ------------------------------------------------
-.btnWrapper{
-  margin: 4vh auto 1vh;
-  width: 8vw;
-  height: 10vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  &--btn{
-    width: 1.5vh;
-    height: 1.5vh;
-    border-radius: 100%;
-    background-color: $l_gray;
-    transition-duration: 0.5s;
-    &:hover{
-      width: 2vh;
-      height: 2vh;
-      background-color: $gray;
-    }
-  }
-  .active{
-    background-color: $black;
-    width: 3.5vh;
-    height: 3.5vh;
-  }
-}
 }
 // ================================================
 }
