--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -8,7 +8,8 @@
     @include position_center;
   }
   &__overview{
-    @include position_center;
+    position: absolute;
+      top: 10vh;
     width: 100vw;
     height: 65vh;
     img{
@@ -16,22 +17,19 @@
       height: 100%;
     }
   }
-}
-.middleBlock{
-  height: 15vh;
-  width:100vw;
-  // background-color: red;
-  &--contentBox{
+  &__contentBox{
+    position: absolute;
+      top: 75vh;
+      left: 50%;
+      transform: translateX(-50%);
     width: 60vw;
-    height: 15vh;
-    margin: 0 auto;
+    height: 20vh;
   }
 }
 // lower================================================
 .lowerBlock{
   width: 100vw;
-  height: 85vh;
-  // background-color: blue;
+  height: 100vh;
   &__imagesBlock{
     padding: 5vh 15vh;
     background-color:rgba(241, 241, 241,0.5);
@@ -41,7 +39,6 @@
     display: flex;
       justify-content: space-between;
     &--bigDisplay{
-      // background-color: red;
       width: 48vw;
       height: 50vh;
       overflow: hidden;
@@ -60,7 +57,6 @@
       }
     }
     &--smallDisplay{
-      // background-color: red;
       width: 28vw;
       height: 50vh;
       display: flex;
@@ -81,6 +77,52 @@
       }
     }
   }
+  &__textBlock{
+    width: 100vw;
+    height: 40vh;
+    padding: 0 15vh;
+    &__infoBlock{
+      // background-color: red;
+      margin: 0 auto;
+      width: 60vw;
+      height: 20vh;
+    }
+    &__linkBlock{
+      margin: 0 auto;
+      width:60vw;
+      height: 20vh;
+      display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      &--app{
+        width: 20vw;
+        background-color: white;
+        height: 10vh;
+        position: relative;
+      }
+      &--git{
+        width: 20vw;
+        height: 10vh;
+        background-color: white;
+        position: relative;
+      }
+    }
+  }
+}
+// ================================================
+th{
+  padding-top: 8vh;
+  vertical-align: top;
+  text-align: left;
+  width: 30%;
+}
+td{
+  padding-top: 8vh;
+  vertical-align: top;
+  text-align: left;
+  width: 60%;
+  color: $gray;
 }
 // ================================================
 }
+
