--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -16,8 +16,10 @@
             =image_tag(info.image.to_s,class:"image#{i}")
       .lowerBlock__imagesBlock--smallDisplay
         - @content.infomations.each_with_index do |info,i|
-          .lowerBlock__imagesBlock--smallDisplay--wrapper
+          .lowerBlock__imagesBlock--smallDisplay--wrapper.smallImage
             =image_tag(info.image.to_s,class:"image#{i}")
+            .viewing
+              VIEWING
     .lowerBlock__textBlock
       %table.lowerBlock__textBlock__infoBlock
         %tr
@@ -27,13 +29,13 @@
         =link_to(@content.link)do
           .lowerBlock__textBlock__linkBlock--app
             .lowerBlock__textBlock__linkBlock--app--text.linkBtn
-              %p Go APP
+              %p VIEW SITE
               .lowerBlock__textBlock__linkBlock--app--icon.arrow
                 =fa_icon "long-arrow-right"
         .lowerBlock__textBlock__linkBlock--git
           =link_to(@content.git)do
             .lowerBlock__textBlock__linkBlock--git--text.linkBtn
-              %p GO GIT
+              %p VIEW GIT
               .lowerBlock__textBlock__linkBlock--git--icon.arrow
                 =fa_icon "long-arrow-right"
 -# ================================================
