--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -51,7 +51,7 @@
       &--wrapper{
         position: absolute;
           top: 0;
-          // left: -46vw;
+          left: 0;
         width: 230vw;
         height:100%;
         img{
