--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -1,5 +1,5 @@
 #show{
-  // upper================================================================================================
+// upper================================================================================================
 .upperBlock{
   height: 100vh;
   width: 100vw;
@@ -37,7 +37,7 @@
   height: 100vh;
   &__imagesBlock{
     padding: 5vh 15vh;
-    background-color:rgba(241, 241, 241,0.5);
+    background-color:rgba(228, 228, 228, 0.5);
     width: 100vw;
     height: 60vh;
     margin: 0 auto;
