--- a/app/views/templates/_header.html.haml
+++ b/app/views/templates/_header.html.haml
@@ -1,16 +1,19 @@
 #header
-  .login
-    -if !User.exists?
-      =link_to("サインアップ",new_user_registration_path,class:"login--signedOut")
-    -elsif !user_signed_in?
-      =link_to("ログイン",new_user_session_path,class:"login--signedOut")
-    -else
-      =link_to("ログアウト",destroy_user_session_path,method: :delete, class:"login--signedIn")
+  -if !User.exists?
+    .login
+      =link_to("signup",new_user_registration_path,class:"login--signedOut")
+  -elsif !user_signed_in?
+    .login
+      =link_to("login",new_user_session_path,class:"login--signedOut")
   -if user_signed_in?
     .menu
+      .menu--logout
+        =link_to("logout",destroy_user_session_path,method: :delete)
       .menu--category
-        =link_to("カテゴリー",new_category_path)
+        =link_to("category",new_category_path)
       .menu--contents
-        =link_to("コンテンツ",new_content_path)
-
+        =link_to("NEW content",new_content_path)
+      -if request.path.match(/\/contents\/\d++$/)
+        .menu--edit
+          =link_to("EDIT content",edit_content_path(params[:id]))
 
