--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -77,14 +77,16 @@
     font-size: 2vh;
   }
   &__box{
+    background-color: red;
     margin: 5vh auto 0;
     width: 70%;
     display: flex;
-    justify-content: left;
-    flex-wrap: wrap;
-    align-items: center;
+      justify-content: left;
+      flex-wrap: wrap;
+      align-items: center;
     &__content{
-      background-color: white;
+      background-color: blue;
+      // background-color: white;
       border: 1px solid $black;
       color: $black;
       border-radius: 10px;
@@ -92,7 +94,7 @@
       height: 15vh;
       margin:2.5vh 2.5vh 2.5vh;
       display: flex;
-      align-items: center;
+        align-items: center;
       &--name{
         margin: 0 auto;
       }
