--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -63,6 +63,7 @@
             =link_to(edit_category_path(category.id),class:"skills__box__content") do
               .skills__box__content--name
                 = category.name
+                =image_tag(category.icon)
         -else
           - @categories.each do |category|
             .skills__box__content
