--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -58,15 +58,10 @@
         2020年。エンジニア転職を決意しプログラミング学習に取り組んできました。
         %br 実務経験はまだありませんが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
-        -if user_signed_in?
-          - @categories.each do |category|
-            =link_to(edit_category_path(category.id),class:"skills__box__content") do
-              =image_tag(category.icon,class:"skills__box__content--icon")
-        -# -else
-        -#   - @categories.each do |category|
-        -#     .skills__box__content
-        -#       .skills__box__content--name
-        -#         = category.name
+        - @categories.each do |category|
+          .skills__box__content{ style: "background-color:#{category.color}" }
+            .skills__box__content--filter.filter
+            =image_tag(category.icon,class:"skills__box__content--icon")
     -# works================================================
     .works
       .works__hedding
@@ -74,3 +69,6 @@
       = render @contents
 -# footer================================================
 = render "/templates/footer"
+
+
+
