--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -59,8 +59,9 @@
         %br 実務経験はまだありませんが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
         - @categories.each do |category|
-          .skills__box__content{ style: "background-color:#{category.color}" }
-            .skills__box__content--filter.filter
+          .skills__box__content{ style: "border-color:#{category.color}" }
+            .skills__box__content--name.name
+              =category.name
             =image_tag(category.icon,class:"skills__box__content--icon")
     -# works================================================
     .works
