--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -83,10 +83,9 @@
       justify-content: left;
       flex-wrap: wrap;
       align-items: center;
+    position: relative;
     &__content{
       background-color: gray;
-      border-style: solid;
-      border-width: 0;
       border-radius: 100%;
       width: 15vh;
       height: 15vh;
@@ -109,7 +108,56 @@
         width: 5vh;
         height: 5vh;
       }
-
+    }
+    .colorLabel{
+      width: 101vw;
+      height: 100%;
+      position: absolute;
+        z-index: 5;
+        left: -125vw;
+    }
+    .modal{
+      width: 101vw;
+      height: 100%;
+      background-color:$l_gray;
+      position: absolute;
+        z-index: 6;
+        left: -125vw;
+      &__topName{
+        position: absolute;
+          top: 10%;
+          left: 50%;
+          transform: translateX(-50%)translateY(-50%);
+          z-index: 8;
+        font-size: 3vh;
+      }
+      &__undoBtn{
+        position: absolute;
+          top: 5%;
+          left: 77%;
+          transform: translateX(-50%)translateY(-50%);
+          z-index: 8;
+        font-size: 3em;
+        transform: rotate(45deg);
+        transition-duration: 0.5s;
+        -webkit-text-stroke: 7px white;
+      }
+      &__linkBox{
+        position: absolute;
+        padding-top: 10vh;
+          top: 5%;
+          left: 50%;
+          transform: translateX(-50%);
+        width: 60%;
+        height: 90%;
+        background-color: white;
+        &--content{
+          width: 100%;
+          height: 5vh;
+          line-height: 5vh;
+          // background-color: blue;
+        }
+      }
     }
   }
 }
