--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -71,8 +71,14 @@
               =fa_icon "plus"
             .modal__linkBox
               -category.contents.each do |content|
-                .modal__linkBox--content
-                  =link_to("#{content.name}",content_path(content.id))
+                .modal__linkBox__content
+                  .modal__linkBox__content--circle{ style: "background-color:#{category.color}" }
+                  =link_to(content_path(content.id)) do
+                    .modal__linkBox__content--name
+                      =content.name
+                  .modal__linkBox__content--arrow.arrow
+                    =fa_icon "long-arrow-right"
+
     -# works================================================
     .works
       .works__hedding
@@ -80,6 +86,5 @@
       = render @contents
 -# footer================================================
 = render "/templates/footer"
-
 
 
