--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -65,19 +65,50 @@
             =image_tag(category.icon,class:"skills__box__content--icon")
           .colorLabel{ style: "background-color:#{category.color}" }
           .modal
-            .modal__topName
-              =category.name
+            -if user_signed_in?
+              =link_to(edit_category_path(category.id)) do
+                .modal__topName
+                  =category.name
+            - else
+              .modal__topName
+                =category.name
             .modal__undoBtn
               =fa_icon "plus"
             .modal__linkBox
-              -category.contents.each do |content|
+              -if category.contents.present?
+                -category.contents.each do |content|
+                  .modal__linkBox__content
+                    .modal__linkBox__content--circle{ style: "background-color:#{category.color}" }
+                    =link_to(content_path(content.id)) do
+                      .modal__linkBox__content--name
+                        =content.name
+                    .modal__linkBox__content--arrow.arrow
+                      =fa_icon "long-arrow-right"
+              -else
                 .modal__linkBox__content
-                  .modal__linkBox__content--circle{ style: "background-color:#{category.color}" }
-                  =link_to(content_path(content.id)) do
-                    .modal__linkBox__content--name
-                      =content.name
-                  .modal__linkBox__content--arrow.arrow
-                    =fa_icon "long-arrow-right"
+                  .modal__linkBox__content--circle
+                  .modal__linkBox__content--name
+                    I'm studying and developing now
+
+        .skills__box__content
+          .skills__box__content--name.name
+            ORHERS
+          =image_tag("icons/git.png",class:"skills__box__content--icon")
+        .colorLabel{ style: "background-color:black" }
+        .modal
+          .modal__topName
+            OTHERS
+          .modal__undoBtn
+            =fa_icon "plus"
+          .modal__linkBox
+            .modal__linkBox__content
+              .modal__linkBox__content--circle{ style: "background-color:black" }
+              .modal__linkBox__content--name
+                Git/Github
+            .modal__linkBox__content
+              .modal__linkBox__content--circle{ style: "background-color:black" }
+              .modal__linkBox__content--name
+                SQL
 
     -# works================================================
     .works
